2004-09-20  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in: --enable-with-image requires both pm3d and binary file
	support. Enforce this in the configure script by not allowing with-image
	to be enabled if the other two options have not also been enabled.

2004-09-21  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Fix documentation for multiplot.

	* src/term.c: Better error message for an invalid option of multiplot.

2004-09-20  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: Fix some minor errors that interfered with 
	latex processing.

2004-09-19  Ethan Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (do_3dplot plot3d_vectors) src/graph3d.h 
	src/plot3d.c (get_3ddata eval_3dplots):  Extend the plotting style
	"with vectors" to apply to 3D plots as well.
	    splot 'data' using <x>:<y>:<z>:<delx>:<dely>:<delz> with vectors \
	          <arrowstyle>
	Only cartesian coordinate mapping is currently supported.

	* docs/gnuplot.doc NEWS: Document extension to 3D.

2004-09-17  Harald Harders  <h.harders@tu-bs.de>

	* term/README term/debug.trm term/gd.trm: Fix typos and add 
	information about enhanced text mode callback entries in TERM_TABLE.

	* term/post.trm:  Move definition of /Rounded to the top of the
	prolog so that it is with the other user-editable definitions.

2004-09-17  Petr Mikulik  <mikulik@physics.muni.cz>

	* NEWS docs/gnuplot.doc src/misc.c: New automatic variable $# gets
	expanded to number of arguments after "call <file>". SF patch 943749.

2004-09-16  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_timestamp set_xyzlabel) src/save.c (save_set_all)
	demo/contours.dem demo/surface1.dem docs/gnuplot.doc:
	Add keyword "offset" to commands of the form
	    old: set xlabel "foo" -1,-1
	    new: set xlabel "foo" offset -1,-1
	This is necessary to pave the way for string variables, as otherwise
	"set title var -1" is mis-parsed as containing the arithmetic expression